<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_white"
    android:orientation="vertical"
    android:paddingTop="30dp"
    android:paddingBottom="30dp">

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/aenirlsttd_black"
        android:gravity="center"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="Telemath"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvHeading"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/logout_desc"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/avenirlstd_roman"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNo"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:background="@drawable/background_blue"
            android:text="@string/no"
            android:fontFamily="@font/bold"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginRight="10dp" />

        <Button
            android:id="@+id/btnYes"
            android:layout_width="100dp"
            android:fontFamily="@font/bold"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:background="@drawable/background_blue"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="@color/white"/>
    </LinearLayout>

</RelativeLayout>
