<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.ChangePasswordActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/bg_toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_below="@id/toolbar"
        tools:context=".Activity.ChangePassword">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="60dp"
            android:paddingLeft="18dp"
            android:paddingTop="10dp"
            android:paddingRight="18dp"
            android:src="@drawable/logo_popup" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="@font/medium"
                    android:text="@string/old_password"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edittext_bg"
                    android:paddingLeft="@dimen/_10sdp">

                    <ImageView
                        android:id="@+id/ivPassword"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/lock" />

                    <EditText
                        android:id="@+id/cs_oldpassword"
                        style="@style/Edittext"
                        android:layout_toRightOf="@+id/ivPassword"
                        android:hint="@string/enter_old_password"
                        android:inputType="textPassword"
                        />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="@font/medium"
                    android:text="@string/new_password"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:paddingLeft="@dimen/_10sdp"
                    android:background="@drawable/edittext_bg">

                    <ImageView
                        android:id="@+id/ivNewPassword"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/lock" />

                    <EditText
                        android:id="@+id/cs_newpassword"
                        style="@style/Edittext"
                        android:layout_toRightOf="@+id/ivNewPassword"
                        android:hint="@string/enter_new_password"
                        android:inputType="textPassword"
                        />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="@font/medium"
                    android:text="@string/confirm_new_password"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:paddingLeft="@dimen/_10sdp"
                    android:background="@drawable/edittext_bg">

                    <ImageView
                        android:id="@+id/ivConfirmPassword"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/lock" />

                    <EditText
                        android:id="@+id/confirm_passw"
                        style="@style/Edittext"
                        android:layout_toRightOf="@+id/ivConfirmPassword"
                        android:hint="@string/confirm_new_password"
                        android:inputType="textPassword"
                        />
                </RelativeLayout>


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChangePassword"
        style="@style/Button"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/bg_btn"
        android:text="@string/change_password" />
</RelativeLayout>