<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.SignupActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnNext"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivBack"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/logo_popup" />
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/WrapTextView"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="Name"
                android:textColor="@color/black"
                android:textSize="14sp" />
            <RelativeLayout
                style="EditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edittext_bg"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/ivName"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/user"
                    app:tint="#DEDEDE" />

                <EditText
                    android:id="@+id/edtName"
                    style="@style/Edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@+id/ivName"
                    android:hint="@string/enter_name"
                    android:inputType="textCapSentences"
                    android:maxLength="25" />
            </RelativeLayout>
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/WrapTextView"
                android:layout_marginTop="15dp"
                android:text="Email Address"
                android:textColor="@color/black"
                android:textSize="14sp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"

                android:layout_marginTop="10dp"

                android:background="@drawable/edittext_bg"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/ivMailicon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/mailicon" />

                <EditText
                    android:id="@+id/edtEmail"
                    style="@style/Edittext"
                    android:layout_toRightOf="@+id/ivMailicon"
                    android:hint="@string/enter_email_address"
                    android:inputType="textEmailAddress" />
            </RelativeLayout>
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/WrapTextView"
                android:layout_marginTop="15dp"
                android:text="Password"
                android:textColor="@color/black"
                android:textSize="14sp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_bg"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/ivPassword"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/lock" />

                <EditText
                    android:id="@+id/editPassword"
                    style="@style/Edittext"
                    android:layout_toRightOf="@+id/ivPassword"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword" />
            </RelativeLayout>
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/WrapTextView"
                android:layout_marginTop="15dp"
                android:text="Confirm Password"
                android:textColor="@color/black"
                android:textSize="14sp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/edittext_bg"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/ivConfirmPassword"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/lock" />

                <EditText
                    android:id="@+id/editConfirmPassword"
                    style="@style/Edittext"
                    android:layout_toRightOf="@+id/ivConfirmPassword"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp">
                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:src="@drawable/checkbox"
                    android:id="@+id/ivOf2"/>
                <androidx.appcompat.widget.AppCompatTextView
                   style="@style/WrapTextView"
                    android:text="I accept "
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
                <androidx.appcompat.widget.AppCompatTextView
                   style="@style/WrapTextView"
                    android:id="@+id/tvTerms"
                    android:text="@string/terms_amp_condotions"
                    android:textColor="@color/app"
                    android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnNext"
        style="@style/Button"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/bg_btn"
        android:text="Next"
        android:textColor="@color/white" />
</RelativeLayout>